<resources>
    <string name="app_name">CookSmart</string>
    <string name="title_recipe">Recipes</string>
    <string name="title_ingredients">Ingredients</string>
    <string name="title_calendar">Calendar</string>
    <string name="ingredient_insert">Add Ingredient</string>
    <string name="category">Category</string>
    <string name="name">Name</string>
    <string name="quantity">Quantity</string>
    <string name="weight">Weight</string>
    <string name="best_before">Best Before Date</string>
    <string name="button_confirm">Confirm</string>
    <string name="button_cancel">Cancel</string>
    <string name="title_add_ingredient">Add Ingredient</string>
    <string name="add">Add</string>
    <string name="change_date">Change date</string>
    <string name="example_quantity">Ex: 2, 0.2 kg, 113 g, 500 ml, 1 cup</string>
    <string name="example_name">Ex: Lemon, Chicken Breast</string>
    <string name="meat_seafood">Meat/Seafood</string>
    <string name="_2023_sep_02">2023 SEP 02</string>
    <string name="chicken_breast">Chicken breast</string>
    <string name="_1_kg">1 kg</string>
    <string name="date_not_set">Date not set!</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="search_title">Search</string>
    <string name="selected_item">Selected item:</string>
    <string name="title">Title</string>
    <string name="instructions">Instructions</string>
    <string name="add_ingredient">Add Ingredient</string>
    <string name="instruction_hint">1. Preheat oven to 365 degrees F. Line two baking sheets with parchment paper and set aside.</string>
    <string name="title_hint">Chocolate Chip Cookies</string>
    <string name="enter_ingredient">Enter Ingredient</string>
    <string name="favorite_icon">Favorite Icon</string>
    <string name="sort_by">Sort by:</string>
    <string name="add_ingredient_button">Add ingredient button</string>
    <string name="favorite_button">Favorite button</string>
    <string name="delete_ingredient_button">Delete ingredient button</string>
    <string name="saved_recipes">Saved Recipes</string>
    <string name="no_plan_detected">No plan detected!</string>
    <string name="plan">Plan</string>
    <string name="add_plan">Add Plan</string>
    <string name="ingredients">Ingredients</string>
    <string name="date_placeholder">Date Placeholder</string>
    <string name="date">Date</string>
    <string name="hint_plan">e.g. Meal Plan, Guests, etc.</string>
    <string name="save">Save</string>
    <string name="write_plan">Write your plan below!</string>
    <string name="generate_recipes">Generate Recipes</string>
    <string name="update_plan">Update Plan</string>

    <string-array name="recipeSpinner">
        <item>Date added: oldest</item>
        <item>Date added: newest</item>
        <item>Name: A to Z</item>
        <item>Favorites</item>
    </string-array>

    <string-array name="ingredientSpinner">
        <item>Date added: oldest</item>
        <item>Date added: newest</item>
        <item>Name: A to Z</item>
        <item>Best before date: oldest</item>
        <item>Best before date: newest</item>
    </string-array>

    <string name="update_recipe">Update Recipe</string>
    <string name="generate_recipe">Generate Recipe</string>
    <string name="add_recipe">Add Recipe</string>
    <string name="recipe_generator">Recipe Generator</string>
    <string name="favorite">Favorite</string>
    <string name="camera">Camera</string>
    <string name="import_from_url">Import from URL</string>
    <string name="notif_opt">Send me a notification when my ingredient is near expiry</string>
    <string name="buttonOption1Text">Cheese, ham, eggs</string>
    <string name="number">Number</string>
    <string name="no_plan_added">No plan added</string>
    <string name="loading">Loading…</string>
    <string name="recipe_generation_warning">Generating recipe! \nPlease don\'t exit the app.</string>
    <string name="_0">0%</string>
    <string name="image_desc">Recipe image</string>
    <string name="response_image">Response image</string>
    <string name="text_placeholder">…</string>
    <string name="reset">Reset</string>
</resources>