<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/title_recipe_update"
            android:layout_width="match_parent"
            android:importantForAutofill="no"
            android:layout_height="48dp"
            android:inputType="textCapWords|textAutoCorrect"
            android:hint="@string/title_hint" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_ingredients"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"/>
        <EditText
            android:id="@+id/recipe_ingredients_edittext_update"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:maxLines="1"
            android:imeOptions="actionDone"
            android:inputType="textCapWords|textAutoCorrect"
            android:hint="@string/enter_ingredient"
            android:importantForAutofill="no" />
        <Button
            android:id="@+id/add_ingredient_recipe_update"
            android:layout_width="match_parent"
            android:textColor="#FFFFFF"
            android:fontFamily="@font/raleway"
            android:layout_height="wrap_content"
            android:text="@string/add_ingredient"/>
        <ListView
            android:id="@+id/recipe_ingredients_listview_update"
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:transcriptMode="alwaysScroll"
            android:nestedScrollingEnabled="true"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instructions"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <EditText
            android:id="@+id/recipe_instructions_update"
            android:hint="@string/instruction_hint"
            android:layout_width="match_parent"
            android:inputType="textMultiLine|textCapSentences|textAutoCorrect"
            android:layout_height="wrap_content"
            android:importantForAutofill="no" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="65dp">
            <Button
                android:id="@+id/button_confirm_update"
                android:layout_width="150dp"
                android:layout_height="60dp"
                android:text="@string/save"
                android:layout_gravity="bottom"
                android:fontFamily="@font/raleway"
                android:textColor="#FFFFFF"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>