<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Spinner
            android:id="@+id/update_category"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/update_name_ingredient"
            android:layout_width="match_parent"
            android:importantForAutofill="no"
            android:layout_height="48dp"
            android:inputType="textCapWords|textAutoCorrect"
            android:hint="@string/example_name"
            android:fontFamily="@font/cabin"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/update_quantity"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|text"
                android:fontFamily="@font/cabin"
                android:hint="@string/number" />
            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:id="@+id/update_quantityType"
                android:layout_width="125dp"
                android:layout_height="48dp" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_before"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/update_date_input_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:text="@string/date_not_set"/>
            <Space
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/update_best_before_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/change_date"
                android:fontFamily="@font/raleway"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:paddingBottom="90dp">
            <Button
                android:id="@+id/update_button_confirm"
                android:layout_width="150dp"
                android:layout_height="70dp"
                android:textColor="#FFFFFF"
                android:text="@string/update"
                android:layout_gravity="bottom"
                android:fontFamily="@font/raleway"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>