<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <EditText
            android:id="@+id/name_ingredient"
            android:layout_width="match_parent"
            android:importantForAutofill="no"
            android:layout_height="48dp"
            android:fontFamily="@font/cabin"
            android:inputType="textCapWords|textAutoCorrect"
            android:hint="@string/example_name" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/quantity"
                android:layout_width="250dp"
                android:layout_height="48dp"
                android:importantForAutofill="no"
                android:inputType="numberDecimal|textNoSuggestions"
                android:fontFamily="@font/cabin"
                android:hint="Number" />
            <Space
                android:layout_width="15dp"
                android:layout_height="wrap_content"/>
            <Spinner
                android:layout_width="125dp"
                android:layout_height="wrap_content"
                android:id="@+id/quantityType" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_before"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:id="@+id/date_input_current"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/cabin"
                android:text="@string/date_not_set"/>
            <Space
                android:layout_width="150dp"
                android:layout_height="wrap_content"/>
            <Button
                android:id="@+id/best_before_date_picker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/change_date"
                android:fontFamily="@font/raleway"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <CheckBox
                android:id="@+id/notificationCheckbox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/notif_opt" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:paddingBottom="90dp">
            <Button
                android:id="@+id/button_confirm"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:text="@string/add"
                android:fontFamily="@font/raleway"
                android:textStyle="bold" />

        </LinearLayout>
    </LinearLayout>
</ScrollView>