<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <Spinner
            android:id="@+id/category"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/name_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Name of your Ingredient" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quantity"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <EditText
            android:id="@+id/quantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ex: 2, 0.2 kg, 113 g, 500 ml, 1 cup" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/best_before"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <EditText
            android:id="@+id/best_before"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="What is the best before date?" />

        <Button
            android:id="@+id/button_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_gravity="center"
            android:text="@string/button_confirm" />
    </LinearLayout>
</ScrollView>
