<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rowLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="start"
    android:orientation="horizontal"
    android:padding="20dp"
    android:foreground="?android:attr/selectableItemBackground">
    <CheckBox
        android:id="@+id/list_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minWidth="48dp"
        android:minHeight="48dp" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/list_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:fontFamily="@font/raleway"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />
        <TextView
            android:id="@+id/list_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:text="@string/category" />
        <TextView
            android:id="@+id/list_quantity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:text="@string/quantity" />

        <TextView
            android:id="@+id/list_best_before"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/cabin"
            android:text="@string/best_before" />
    </LinearLayout>
</LinearLayout>
