<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_fridge">
    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.cooksmart.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />
    <fragment
        android:id="@+id/navigation_fridge"
        android:name="com.example.cooksmart.ui.fridge.FridgeFragment"
        android:label="@string/title_ingredients"
        tools:layout="@layout/fragment_fridge" >
        <action
            android:id="@+id/action_navigation_fridge_to_fridgeInsert2"
            app:destination="@id/fridgeInsert" />
        <action
            android:id="@+id/action_navigation_fridge_to_ingredientUpdate"
            app:destination="@id/ingredientUpdate" />
    </fragment>

    <fragment
        android:id="@+id/navigation_calendar"
        android:name="com.example.cooksmart.ui.calendar.CalendarFragment"
        android:label="@string/title_calendar"
        tools:layout="@layout/fragment_calendar" />
    <fragment
        android:id="@+id/fridgeInsert"
        android:name="com.example.cooksmart.ui.fridge.FridgeInsert"
        android:label="@string/title_add_ingredient" >
        <action
            android:id="@+id/action_fridgeInsert2_to_navigation_fridge"
            app:destination="@id/navigation_fridge" />
    </fragment>
    <fragment
        android:id="@+id/ingredientUpdate"
        android:name="com.example.cooksmart.ui.fridge.IngredientUpdate"
        android:label="Update" >
        <action
            android:id="@+id/action_ingredientUpdate_to_navigation_fridge"
            app:destination="@id/navigation_fridge" />
        <argument
            android:name="currentIngredient"
            app:argType="com.example.cooksmart.database.Ingredient" />
    </fragment>
    <fragment
        android:id="@+id/navigation_all_recipes"
        android:name="com.example.cooksmart.ui.savedRecipes.AllRecipesFragment"
        android:label="All Recipes"
        tools:layout="@layout/fragment_all_recipes" >
        <action
            android:id="@+id/action_navigation_all_recipes_to_viewRecipe"
            app:destination="@id/viewRecipe" />
    </fragment>
    <fragment
        android:id="@+id/viewRecipe"
        android:name="com.example.cooksmart.ui.savedRecipes.ViewRecipe"
        android:label="View Recipe"
        tools:layout="@layout/fragment_view_recipe" >
        <action
            android:id="@+id/action_viewRecipe_to_navigation_all_recipes"
            app:destination="@id/navigation_all_recipes" />
        <argument
            android:name="currentRecipe"
            app:argType="com.example.cooksmart.database.Recipe" />
    </fragment>

</navigation>