<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/tvTitleDialogRecipeGeneration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/raleway"
        android:text="@string/loading"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvDialogRecipeGeneration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/cabin"
        android:text="@string/recipe_generation_warning"
        android:textSize="18sp"
        android:paddingTop="16dp"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleDialogRecipeGeneration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ProgressBar
        android:id="@+id/dialogProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:max="100"
        android:minWidth="100dp"
        android:minHeight="20dp"
        android:progress="1"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@+id/tvDialogRecipeGeneration"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/dialogProgressPercentage"
        app:layout_constraintHorizontal_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/dialogProgressPercentage"
        android:layout_width="70dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:fontFamily="@font/cabin"
        android:paddingBottom="16dp"
        android:text="@string/_0"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dialogProgressBar"
        app:layout_constraintTop_toTopOf="@+id/dialogProgressBar" />
</androidx.constraintlayout.widget.ConstraintLayout>

